fix(dropdowns): change color/spacing
The border color, box shadow, and padding have all been changed to
reflect the new designs

This also changes the main example

--- a/src/pivotal-ui/components/dropdowns/dropdowns.scss
+++ b/src/pivotal-ui/components/dropdowns/dropdowns.scss
@@ -27,15 +27,13 @@ This is the basic bootstrap dropdown.
     Button Dropdown
     <span class="caret"></span>
   </button>
-  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdown-button-1">
+  <ul class="dropdown-menu dropdown-border" role="menu" aria-labelledby="dropdown-button-1">
     <li role="presentation">
       <a href="http://www.google.com" role="menuitem">Google</a>
     </li>
-    <li class="divider mvn"></li>
     <li role="presentation">
       <a href="http://www.yahoo.com" role="menuitem">Yahoo</a>
     </li>
-    <li class="divider mvn"></li>
     </li><li role="presentation">
       <a href="http://www.aol.com" role="menuitem">Aol</a>
     </li>
@@ -171,15 +169,16 @@ Here's a crazy-complex dropdown. Not for the faint of heart.
 }
 
 .dropdown-menu {
-  @include box-shadow(0 2px 0 rgba(211, 217, 217, 0.50));
+  @include box-shadow(0 1px 5px rgba(211, 217, 217, 0.60));
   background-color: white;
-  border: 1px solid $neutral-7;
+  border: 1px solid $dropdown-border;
   padding: 0 0;
 
   > li {
     > a {
       color: $dark-5;
       font-weight: 600;
+      padding: 10px 20px;
       &:hover {
         color: $dark-5;
         background-color: darken($neutral-11, 6%);
@@ -189,8 +188,6 @@ Here's a crazy-complex dropdown. Not for the faint of heart.
   &.dropdown-border {
     > li {
       > a {
-        padding-top: 7px;
-        padding-bottom: 7px;
         border-bottom: 1px solid $dropdown-border;
       }
     }
